# TIPE

./: Q1.py  README.md  TIPE.ino  arduino_connection.py  devenv.nix  functions_nn.py  main.py  pyproject.toml  xor.py  xor_nn.py
applications/: breast_cancer_nn.py  caracteristiques.py  circle_nn.py  dac.py  functions_nn.py  xor_nn.py
arduino/: ANN.ino
arduino/ANN/: ANN.ino
arduino/ANN_sim/: ANN_sim.ino
arduino/grapher/: grapher.ino
encephalon/: __init__.py  arduino_sim.py  grapher.py  nn.py  representations.py  serial_utils.py  types_and_functions.py
src/encephalon/: serial_utils.py
tests/: test_arduino_sim.py  test_nn_with_simulator.py  test_serial_utils.py  test_types_and_functions.py
